--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ c5.5,0,9.9,4.5,9.9,9.9V73.3z"></path></svg></span>
         <span></span>
       </p>
       <a class="u-link" href="" target="_blank">
-        <span>Сайт разработан студентом группы 3-1 кск Каниськином Дмитрием</span>
+        <span>Сайт разработан студентом группы 3-1 кск Каниськиным Дмитрием</span>
       </a> 
     </section>
   </body>
